pkl/tests/invalid/unknownDependency.pkl
amends "../../TaskSpans.pkl"

traceID = "11111111111111111111111111111111"

spans {
  new TaskSpan {
    goName = "NeedsMissing"
    name = "needs-missing"
    uuid = "11111111-1111-4111-8111-111111111111"
    traceID = "11111111111111111111111111111111"
    spanID = "1111111111111111"
    depends {
      new SpanRef {
        name = "missing"
        uuid = "99999999-9999-4999-8999-999999999999"
        spanID = "9999999999999999"
      }
    }
  }
}
